# rust_rocket_api_workspace

./: .env.example.dist  .gitignore  Cargo.toml  Makefile  README.md  Rocket.toml  docker-compose.yml
docker/: Dockerfile
src/: tests.rs
