[package]
name = "rust_rocket_api_workspace"
version = "0.1.0"
authors = ["Guileas"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
rocket_okapi = { version = "0.7.0-alpha-1" }
okapi = "0.6.0-alpha-1"
dotenv = "0.15.0"